--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <li>Tax exemption applied properly — savings stay yours</li>
           <li>Respectful, trained partner dealers</li>
         </ul>
-        <div class="disclaimer"><p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders. We never sell your data.</p></div>
+        <div class="disclaimer"><p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p></div>
       </aside>
     </div>
   </section>
