--- a/index.html
+++ b/index.html
@@ -97,13 +97,64 @@
           <span class="label-warn">Not guaranteed</span>
         </div>
         <p class="muted">There’s no automatic special rate for being Indigenous. These programs are <strong>case-by-case</strong> and depend on your location, job, band programs, or training. We share them so you can check eligibility directly—no false promises.</p>
-        <ul class="link-list">
-          <li><strong>Employment &amp; Training (ISET):</strong> <a href="https://www.canada.ca/en/employment-social-development/services/indigenous/iset.html" target="_blank" rel="noopener noreferrer">Find your ISET provider</a></li>
-          <li><strong>Band/Council Programs:</strong> <a href="https://www.sac-isc.gc.ca/eng/1100100023232/1619469934912" target="_blank" rel="noopener noreferrer">First Nations directory (ISC)</a></li>
-          <li><strong>Tax Exemption (on-reserve or delivered):</strong> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-specific-situations/gst-hst-indians.html" target="_blank" rel="noopener noreferrer">CRA GST/HST &amp; Indians</a> • <a href="https://www2.gov.bc.ca/gov/content/taxes/sales-taxes/pst/exemptions/first-nations" target="_blank" rel="noopener noreferrer">BC PST Exemption</a></li>
-          <li><strong>Entrepreneurship &amp; Development Loans:</strong> <a href="https://nacca.ca/our-network/" target="_blank" rel="noopener noreferrer">Find a NACCA lender</a></li>
-          <li><strong>Sector/Economic Programs:</strong> <a href="https://natural-resources.canada.ca/our-natural-resources/forests-forestry/indigenous-forestry-program/21375" target="_blank" rel="noopener noreferrer">NRCan Indigenous Forestry Program</a></li>
-        </ul>
+        <ul class="link-list rich">
+  <li>
+    <strong>Employment &amp; Training (ISET)</strong> —
+    <a href="https://www.canada.ca/en/employment-social-development/services/indigenous/iset.html" target="_blank" rel="noopener noreferrer">Find your local ISET provider</a>
+    <div class="how">
+      <p><strong>Helps with:</strong> Case-by-case support for getting to work or training — sometimes travel/transport, gear, or short-term assistance if a vehicle is essential for employment or a certified program.</p>
+      <p><strong>Good fit if:</strong> You’re starting a job or enrolled/accepted in training and need reliable transport to attend.</p>
+      <p><strong>What to bring:</strong> Job offer or training acceptance letter, schedule/location, a simple note explaining why a vehicle is required, and a dealer quote (if requested).</p>
+      <p><strong>How to use on your application:</strong> Contact your ISET provider first and ask about “transportation supports.” If they confirm help, include their letter or email in your application notes.</p>
+    </div>
+  </li>
+
+  <li>
+    <strong>Band / Council Programs</strong> —
+    <a href="https://www.sac-isc.gc.ca/eng/1100100023232/1619469934912" target="_blank" rel="noopener noreferrer">Find your Band office</a>
+    <div class="how">
+      <p><strong>Helps with:</strong> Some Bands offer employment or economic-development supports (e.g., small down-payment assistance, letters of support/guarantee, or reimbursements) when a vehicle is essential for work.</p>
+      <p><strong>Good fit if:</strong> You are a member living on- or off-reserve and have Band programs for employment, training, or entrepreneurship.</p>
+      <p><strong>What to bring:</strong> Proof of Band membership, employer or buyer letters showing the vehicle is required, and a dealer quote.</p>
+      <p><strong>How to use on your application:</strong> If your Band can issue a support letter or funds, attach proof (letter/email) so the dealer/lender sees it up front.</p>
+    </div>
+  </li>
+
+  <li>
+    <strong>Tax Exemption (on-reserve or delivered to reserve)</strong> —
+    <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-specific-situations/gst-hst-indians.html" target="_blank" rel="noopener noreferrer">CRA GST/HST &amp; Indians</a> •
+    <a href="https://www2.gov.bc.ca/gov/content/taxes/sales-taxes/pst/exemptions/first-nations" target="_blank" rel="noopener noreferrer">BC PST Exemption</a>
+    <div class="how">
+      <p><strong>Helps with:</strong> Removes applicable sales taxes when all CRA/provincial rules are met (status card + purchase/delivery on reserve as required).</p>
+      <p><strong>Good fit if:</strong> You hold a valid status card and can meet the “on-reserve purchase or delivery” documentation rules in your province/territory.</p>
+      <p><strong>What to bring:</strong> Status card, proof of on-reserve residence (if needed), and delivery-to-reserve documentation. Ask the dealer to complete all required exemption forms.</p>
+      <p><strong>How to use on your application:</strong> Tell us in the notes if you’ll claim exemption and which reserve for delivery. <em>Reminder:</em> Exemption reduces taxes only; make sure the dealer’s price isn’t marked up, so the savings are real.</p>
+    </div>
+  </li>
+
+  <li>
+    <strong>Aboriginal Financial Institutions (via NACCA)</strong> —
+    <a href="https://nacca.ca/our-network/" target="_blank" rel="noopener noreferrer">Find a NACCA lender</a>
+    <div class="how">
+      <p><strong>Helps with:</strong> Business financing and development loans — including vehicles primarily used for business (e.g., fishing, crafts delivery, contracting).</p>
+      <p><strong>Good fit if:</strong> The vehicle is mainly for business use (typically &gt;50%) and you can show basic income from your activity (invoices, deposits, buyer letters).</p>
+      <p><strong>What to bring:</strong> Simple business plan or description, 6–12 months of bank statements, invoices/buyer letters, estimated vehicle cost/quote.</p>
+      <p><strong>How to use on your application:</strong> You can apply directly to an AFI, or include an AFI pre-approval/letter alongside your dealer application to strengthen the file.</p>
+    </div>
+  </li>
+
+  <li>
+    <strong>Indigenous Forestry Program (NRCan)</strong> —
+    <a href="https://natural-resources.canada.ca/our-natural-resources/forests-forestry/indigenous-forestry-program/21375" target="_blank" rel="noopener noreferrer">Program info</a>
+    <div class="how">
+      <p><strong>Helps with:</strong> Community and business projects in forestry — sometimes including training and capacity-building where transport is essential.</p>
+      <p><strong>Good fit if:</strong> You (or your Band/business) are part of an active forestry project or partnership that requires reliable transportation.</p>
+      <p><strong>What to bring:</strong> Project details or contact, proof your role requires a vehicle (employer letter / project manager email), and a quote.</p>
+      <p><strong>How to use on your application:</strong> Get a short note from the project lead confirming the need for a vehicle; include it in your application so the dealer understands the context.</p>
+    </div>
+  </li>
+</ul>
+
       </div>
     </div>
   </section>
