--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Turtle Island Financing — Indigenous-led Auto Financing in Canada</title>
   <meta name="description" content="Indigenous-owned lead service in Canada. Dealers trained in Indigenous protocol. Transparent, Canadian info only.">
   <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
-  <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
+  <meta property="og:description" content="We connect you with trained partner dealerships. Transparent, honest, and culturally sensitive.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/hero-art.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,11 @@
           <p class="tag">Indigenous-led • Canada</p>
         </div>
       </div>
-      <a class="btn ghost" href="#apply">Apply Now</a>
+      <nav class="top-nav">
+        <a class="btn link" href="/verify">Verify</a>
+        <a class="btn link" href="/dealers.html">For Dealers</a>
+        <a class="btn ghost" href="#apply">Apply Now</a>
+      </nav>
     </div>
   </header>
 
@@ -39,6 +43,7 @@
           <a class="btn link" href="#how-we-help">How We Help</a>
         </div>
         <ul class="pill-list">
+          <li>No cost to you — dealer pays referral fee</li>
           <li>No false promises</li>
           <li>Tax exemption handled properly</li>
           <li>Dealers trained in Indigenous protocol</li>
@@ -89,6 +94,29 @@
     </div>
   </section>
 
+  <!-- NEW: Dealer Certification section -->
+  <section class="dealer-cert">
+    <div class="container">
+      <h3>Dealer Certification — Training by Brooke Ashley Group</h3>
+      <p class="muted">
+        Partner staff complete Indigenous cultural competency training delivered by <strong>Brooke Ashley Group</strong>.
+        Certification is <strong>valid for five (5) years</strong> and <strong>portable</strong> — a certified person may
+        use their credential at any dealership with an active Turtle Island membership.
+      </p>
+      <ul class="checklist">
+        <li>Respectful, patient communication — zero pressure</li>
+        <li>Proper handling of tax exemption — savings stay yours</li>
+        <li>Comfort with seasonal/self-employed income documentation</li>
+        <li>Public verification at <a href="/verify">turtleislandfinancing.ca/verify</a></li>
+      </ul>
+      <p class="small muted">Note: This is Turtle Island’s program, delivered by Brooke Ashley Group. It is separate from CCAB’s CAB designation.</p>
+      <div style="margin-top:12px">
+        <a href="/standards.html" class="btn link">Our Standards</a>
+        <a href="/dealers.html" class="btn">Dealer Program</a>
+      </div>
+    </div>
+  </section>
+
   <section class="info-supports" aria-labelledby="supports-title">
     <div class="container">
       <div class="info-card">
@@ -98,62 +126,62 @@
         </div>
         <p class="muted">There’s no automatic special rate for being Indigenous. These programs are <strong>case-by-case</strong> and depend on your location, job, band programs, or training. We share them so you can check eligibility directly—no false promises.</p>
         <ul class="link-list rich">
-  <li>
-    <strong>Employment &amp; Training (ISET)</strong> —
-    <a href="https://www.canada.ca/en/employment-social-development/services/indigenous/iset.html" target="_blank" rel="noopener noreferrer">Find your local ISET provider</a>
-    <div class="how">
-      <p><strong>Helps with:</strong> Case-by-case support for getting to work or training — sometimes travel/transport, gear, or short-term assistance if a vehicle is essential for employment or a certified program.</p>
-      <p><strong>Good fit if:</strong> You’re starting a job or enrolled/accepted in training and need reliable transport to attend.</p>
-      <p><strong>What to bring:</strong> Job offer or training acceptance letter, schedule/location, a simple note explaining why a vehicle is required, and a dealer quote (if requested).</p>
-      <p><strong>How to use on your application:</strong> Contact your ISET provider first and ask about “transportation supports.” If they confirm help, include their letter or email in your application notes.</p>
-    </div>
-  </li>
+          <li>
+            <strong>Employment &amp; Training (ISET)</strong> —
+            <a href="https://www.canada.ca/en/employment-social-development/services/indigenous/iset.html" target="_blank" rel="noopener noreferrer">Find your local ISET provider</a>
+            <div class="how">
+              <p><strong>Helps with:</strong> Case-by-case support for getting to work or training — sometimes travel/transport, gear, or short-term assistance if a vehicle is essential for employment or a certified program.</p>
+              <p><strong>Good fit if:</strong> You’re starting a job or enrolled/accepted in training and need reliable transport to attend.</p>
+              <p><strong>What to bring:</strong> Job offer or training acceptance letter, schedule/location, a simple note explaining why a vehicle is required, and a dealer quote (if requested).</p>
+              <p><strong>How to use on your application:</strong> Contact your ISET provider first and ask about “transportation supports.” If they confirm help, include their letter or email in your application notes.</p>
+            </div>
+          </li>
 
-  <li>
-    <strong>Band / Council Programs</strong> —
-    <a href="https://www.sac-isc.gc.ca/eng/1100100023232/1619469934912" target="_blank" rel="noopener noreferrer">Find your Band office</a>
-    <div class="how">
-      <p><strong>Helps with:</strong> Some Bands offer employment or economic-development supports (e.g., small down-payment assistance, letters of support/guarantee, or reimbursements) when a vehicle is essential for work.</p>
-      <p><strong>Good fit if:</strong> You are a member living on- or off-reserve and have Band programs for employment, training, or entrepreneurship.</p>
-      <p><strong>What to bring:</strong> Proof of Band membership, employer or buyer letters showing the vehicle is required, and a dealer quote.</p>
-      <p><strong>How to use on your application:</strong> If your Band can issue a support letter or funds, attach proof (letter/email) so the dealer/lender sees it up front.</p>
-    </div>
-  </li>
+          <li>
+            <strong>Band / Council Programs</strong> —
+            <a href="https://www.sac-isc.gc.ca/eng/1100100023232/1619469934912" target="_blank" rel="noopener noreferrer">Find your Band office</a>
+            <div class="how">
+              <p><strong>Helps with:</strong> Some Bands offer employment or economic-development supports (e.g., small down-payment assistance, letters of support/guarantee, or reimbursements) when a vehicle is essential for work.</p>
+              <p><strong>Good fit if:</strong> You are a member living on- or off-reserve and have Band programs for employment, training, or entrepreneurship.</p>
+              <p><strong>What to bring:</strong> Proof of Band membership, employer or buyer letters showing the vehicle is required, and a dealer quote.</p>
+              <p><strong>How to use on your application:</strong> If your Band can issue a support letter or funds, attach proof (letter/email) so the dealer/lender sees it up front.</p>
+            </div>
+          </li>
 
-  <li>
-    <strong>Tax Exemption (on-reserve or delivered to reserve)</strong> —
-    <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-specific-situations/gst-hst-indians.html" target="_blank" rel="noopener noreferrer">CRA GST/HST &amp; Indians</a> •
-    <a href="https://www2.gov.bc.ca/gov/content/taxes/sales-taxes/pst/exemptions/first-nations" target="_blank" rel="noopener noreferrer">BC PST Exemption</a>
-    <div class="how">
-      <p><strong>Helps with:</strong> Removes applicable sales taxes when all CRA/provincial rules are met (status card + purchase/delivery on reserve as required).</p>
-      <p><strong>Good fit if:</strong> You hold a valid status card and can meet the “on-reserve purchase or delivery” documentation rules in your province/territory.</p>
-      <p><strong>What to bring:</strong> Status card, proof of on-reserve residence (if needed), and delivery-to-reserve documentation. Ask the dealer to complete all required exemption forms.</p>
-      <p><strong>How to use on your application:</strong> Tell us in the notes if you’ll claim exemption and which reserve for delivery. <em>Reminder:</em> Exemption reduces taxes only; make sure the dealer’s price isn’t marked up, so the savings are real.</p>
-    </div>
-  </li>
+          <li>
+            <strong>Tax Exemption (on-reserve or delivered to reserve)</strong> —
+            <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-specific-situations/gst-hst-indians.html" target="_blank" rel="noopener noreferrer">CRA GST/HST &amp; Indians</a> •
+            <a href="https://www2.gov.bc.ca/gov/content/taxes/sales-taxes/pst/exemptions/first-nations" target="_blank" rel="noopener noreferrer">BC PST Exemption</a>
+            <div class="how">
+              <p><strong>Helps with:</strong> Removes applicable sales taxes when all CRA/provincial rules are met (status card + purchase/delivery on reserve as required).</p>
+              <p><strong>Good fit if:</strong> You hold a valid status card and can meet the “on-reserve purchase or delivery” documentation rules in your province/territory.</p>
+              <p><strong>What to bring:</strong> Status card, proof of on-reserve residence (if needed), and delivery-to-reserve documentation. Ask the dealer to complete all required exemption forms.</p>
+              <p><strong>How to use on your application:</strong> Tell us in the notes if you’ll claim exemption and which reserve for delivery. <em>Reminder:</em> Exemption reduces taxes only; make sure the dealer’s price isn’t marked up, so the savings are real.</p>
+            </div>
+          </li>
 
-  <li>
-    <strong>Aboriginal Financial Institutions (via NACCA)</strong> —
-    <a href="https://nacca.ca/our-network/" target="_blank" rel="noopener noreferrer">Find a NACCA lender</a>
-    <div class="how">
-      <p><strong>Helps with:</strong> Business financing and development loans — including vehicles primarily used for business (e.g., fishing, crafts delivery, contracting).</p>
-      <p><strong>Good fit if:</strong> The vehicle is mainly for business use (typically &gt;50%) and you can show basic income from your activity (invoices, deposits, buyer letters).</p>
-      <p><strong>What to bring:</strong> Simple business plan or description, 6–12 months of bank statements, invoices/buyer letters, estimated vehicle cost/quote.</p>
-      <p><strong>How to use on your application:</strong> You can apply directly to an AFI, or include an AFI pre-approval/letter alongside your dealer application to strengthen the file.</p>
-    </div>
-  </li>
+          <li>
+            <strong>Aboriginal Financial Institutions (via NACCA)</strong> —
+            <a href="https://nacca.ca/our-network/" target="_blank" rel="noopener noreferrer">Find a NACCA lender</a>
+            <div class="how">
+              <p><strong>Helps with:</strong> Business financing and development loans — including vehicles primarily used for business (e.g., fishing, crafts delivery, contracting).</p>
+              <p><strong>Good fit if:</strong> The vehicle is mainly for business use (typically &gt;50%) and you can show basic income from your activity (invoices, deposits, buyer letters).</p>
+              <p><strong>What to bring:</strong> Simple business plan or description, 6–12 months of bank statements, invoices/buyer letters, estimated vehicle cost/quote.</p>
+              <p><strong>How to use on your application:</strong> You can apply directly to an AFI, or include an AFI pre-approval/letter alongside your dealer application to strengthen the file.</p>
+            </div>
+          </li>
 
-  <li>
-    <strong>Indigenous Forestry Program (NRCan)</strong> —
-    <a href="https://natural-resources.canada.ca/our-natural-resources/forests-forestry/indigenous-forestry-program/21375" target="_blank" rel="noopener noreferrer">Program info</a>
-    <div class="how">
-      <p><strong>Helps with:</strong> Community and business projects in forestry — sometimes including training and capacity-building where transport is essential.</p>
-      <p><strong>Good fit if:</strong> You (or your Band/business) are part of an active forestry project or partnership that requires reliable transportation.</p>
-      <p><strong>What to bring:</strong> Project details or contact, proof your role requires a vehicle (employer letter / project manager email), and a quote.</p>
-      <p><strong>How to use on your application:</strong> Get a short note from the project lead confirming the need for a vehicle; include it in your application so the dealer understands the context.</p>
-    </div>
-  </li>
-</ul>
+          <li>
+            <strong>Indigenous Forestry Program (NRCan)</strong> —
+            <a href="https://natural-resources.canada.ca/our-natural-resources/forests-forestry/indigenous-forestry-program/21375" target="_blank" rel="noopener noreferrer">Program info</a>
+            <div class="how">
+              <p><strong>Helps with:</strong> Community and business projects in forestry — sometimes including training and capacity-building where transport is essential.</p>
+              <p><strong>Good fit if:</strong> You (or your Band/business) are part of an active forestry project or partnership that requires reliable transportation.</p>
+              <p><strong>What to bring:</strong> Project details or contact, proof your role requires a vehicle (employer letter / project manager email), and a quote.</p>
+              <p><strong>How to use on your application:</strong> Get a short note from the project lead confirming the need for a vehicle; include it in your application so the dealer understands the context.</p>
+            </div>
+          </li>
+        </ul>
 
       </div>
     </div>
@@ -180,12 +208,23 @@
         <h3>Quick Pre-Approval</h3>
         <p class="muted">We’ll share your application with a trained partner dealership in Canada. They may contact you by phone, SMS, or email.</p>
 
-        <form name="preapproval" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/thank-you.html" id="leadForm">
+        <!-- Netlify Forms: correct honeypot + hidden form-name -->
+        <form name="preapproval"
+              method="POST"
+              data-netlify="true"
+              netlify-honeypot="bot-field"
+              action="/thank-you.html"
+              id="leadForm">
           <input type="hidden" name="form-name" value="preapproval">
-          <input type="hidden" name="bot-field">
+          <!-- Honeypot field (real input, visually hidden) -->
+          <p style="position:absolute;left:-9999px;">
+            <label>Don’t fill this out: <input name="bot-field"></label>
+          </p>
+
           <input type="hidden" name="utm_source"><input type="hidden" name="utm_medium">
           <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
           <input type="hidden" name="utm_content">
+
           <div class="row">
             <label>Full Name*<input type="text" name="name" required></label>
             <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604-555-0123"></label>
@@ -210,9 +249,14 @@
             </select></label>
           </div>
           <label>Notes (optional)<textarea name="notes" rows="3" placeholder="Seasonal fishing, self-employed, on-reserve delivery, timeline, budget…"></textarea></label>
-          <label class="consent"><input type="checkbox" name="consent" required>
-            I consent to my application being shared with partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application.
+
+          <label class="consent">
+            <input type="checkbox" name="consent" required>
+            I consent to my application being shared with partner dealerships for the purpose of securing financing.
+            I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application.
+            There is no cost to me for this service; the partner dealership pays the referral fee.
           </label>
+
           <button type="submit" class="btn wide">Get Pre-Approved</button>
         </form>
       </div>
@@ -238,6 +282,9 @@
       <p>© <span id="year"></span> Turtle Island Financing • An initiative of Brooke Ashley Group • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
       <nav>
         <a href="#apply">Apply</a>
+        <a href="/verify">Verify</a>
+        <a href="/dealers.html">For Dealers</a>
+        <a href="/standards.html">Our Standards</a>
         <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
         <a href="#" onclick="window.alert('Privacy: We share your info only with partner dealers for financing.'); return false;">Privacy</a>
       </nav>
