--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <aside class="trust">
         <h4>Trust &amp; Certification</h4>
         <div class="ccab-badge" role="group" aria-label="Certification badge">
-          <img src="assets/ccab-cab-badge.png" alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business">
+          <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
