--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
-          <li>No hidden fees or false promises</li>
-          <li>Tax exemption applied properly — savings stay yours</li>
-          <li>Respectful, trained partner dealers</li>
+          <li>Brooke Ashley Group. (o/a Turtle Island Financing) </li>
+          <li>100% Indigenous owned and operated</li>
+          <li>OCAP, Trauma informed Trained staff</li>
         </ul>
         <div class="disclaimer"><p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p></div>
       </aside>
