--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Indigenous-led Auto Financing in Canada</title>
+  <title>Turtle Island Financing — Indigenous Owned & led Auto Financing in Canada</title>
   <meta name="description" content="Indigenous-owned lead service in Canada. Dealers trained in Indigenous protocol. Transparent, Canadian info only.">
   <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
   <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
@@ -22,7 +22,7 @@
         <div class="logo">🐢</div>
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">Indigenous-led • Canada</p>
+          <p class="tag">Indigenous  Owned and led • Canada</p>
         </div>
       </div>
       <nav class="top-nav">
@@ -43,10 +43,10 @@
           <a class="btn link" href="#how-we-help">How We Help</a>
         </div>
         <ul class="pill-list">
-          <li>No cost to you — dealer pays referral fee</li>
+          <li>No cost to you</li>
           <li>No false promises</li>
-          <li>Tax exemption handled properly</li>
-          <li>Dealers trained in Indigenous protocol</li>
+          <li>Tax exemption handled respectfully</li>
+          <li>Dealers trained by us</li>
         </ul>
       </div>
       <div class="hero-art">
