--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="card"><h4>Connect</h4><p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p></div>
         <div class="card"><h4>Prepare</h4><p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p></div>
         <div class="card"><h4>Mediate</h4><p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p></div>
-        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision. We are not a lender.</p></div>
+        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p></div>
       </div>
     </div>
   </section>
